Aligned the navbar correctly

--- a/frontend/css/home.css
+++ b/frontend/css/home.css
@@ -1,23 +1,37 @@
-.nav-left, .nav-right, .nav-center {
-  display: flex;
-  align-items: center;
+.nav-left,
+.nav-right,
+.nav-center {
+    display: flex;
+    position: absolute;
+    align-items: center;
 }
 
 .nav-center {
-  flex-direction: row;
-  gap: 10px;
-  text-align: center;
+    left: 50%;
+    transform: translateX(-50%);
+}
+
+.nav-left {
+    padding-left: 10px;
+    left: 10px;
+}
+
+.nav-right {
+    padding-right: 10px;
+    right: 10px;
 }
 
 .nav-center p {
-  font-weight: 600;
+    font-weight: 600;
 }
 
-.nav-right button, .nav-left button {
-  background: transparent;
-  border: none;
-  font-size: 18px;
-  cursor: pointer;
+.nav-right button,
+.nav-center button,
+.nav-left button {
+    background: transparent;
+    border: none;
+    font-size: 18px;
+    cursor: pointer;
 }
 
 .controls {
@@ -111,6 +125,7 @@
     border-radius: 20px;
     width: 100%;
     height: 100%;
+    cursor: pointer;
 }
 
 @media (max-width: 991.98px) {
